--- a/config/.settings
+++ b/config/.settings
@@ -1,12 +1,12 @@
 {
     "username": "intimantest@patronmanager.com.devbox", 
-    "environment": "sandbox", 
     "project_name": "VolunteersForPatronManager", 
-    "workspace": "/Users/cdcarter", 
     "org_url": "", 
     "namespace": "", 
+    "metadata_container": "1dc550000008OweAAE", 
+    "environment": "sandbox", 
+    "workspace": "/Users/cdcarter/Projects", 
     "id": "8ZRL9ATTW6FLOMKCXXBFAHFJOB682L83", 
-    "metadata_container": "1dc550000008OwUAAU", 
     "subscription": [
         "ApexClass", 
         "ApexComponent", 
