add a little link to create the volunteers via a complex and annoying formula field, but ostensibly this closes #4

--- a/src/package.xml
+++ b/src/package.xml
@@ -10,6 +10,7 @@
 		<members>PatronTicket__TicketableEvent__c.Duration_hours__c</members>
 		<members>PatronTicket__TicketableEvent__c.Volunteer_Campaign__c</members>
 		<members>PatronTicket__TicketableEvent__c.Volunteer_Notes__c</members>
+		<members>PatronTicket__TicketableEvent__c.Create_Volunteers_Link__c</members>
 		<name>CustomField</name>
 	</types>
 	<types>
