a layout for our V4PM campaigns

--- a/src/package.xml
+++ b/src/package.xml
@@ -15,6 +15,7 @@
 	</types>
 	<types>
 		<members>Campaign-Volunteer Campaign Prototype Layout</members>
+		<members>Campaign-V4PM Campaign Layout</members>
 		<members>GW_Volunteers__Volunteer_Job__c-Volunteer Job Prototype Layout</members>
 		<members>GW_Volunteers__Volunteer_Shift__c-Volunteer Shift Prototype Layout</members>
 		<name>Layout</name>
